reduce docker image verbosity to debug.

--- a/docker/breez/lnd.conf
+++ b/docker/breez/lnd.conf
@@ -1,7 +1,7 @@
 alias=Breez
 bitcoin.active=1
 bitcoin.simnet=1
-debuglevel=info
+debuglevel=debug
 noseedbackup=1
 maxlogfiles=10
 maxlogfilesize=50
