--- a/.github/workflows/itest.yml
+++ b/.github/workflows/itest.yml
@@ -17,6 +17,9 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    env:
+      working-directory: './'
+      TEST_DIR: './test'
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -27,7 +30,6 @@ jobs:
       - name: Build the stack
         run: |
           docker-compose -f ./docker/simnet.yml build
-          export TEST_DIR=$(pwd)/test
 
       # Runs the tests
       - name: Run integration tests
