fix environment variables

--- a/.github/workflows/itest.yml
+++ b/.github/workflows/itest.yml
@@ -35,17 +35,17 @@ jobs:
       - name: Run integration tests
         env:
           ALICE_BREEZ_ADDRESS: "127.0.0.1:50053"
-          ALICE_DIR: "$TEST_DIR/alice_node"
+          ALICE_DIR: "${{ env.TEST_DIR }}/alice_node"
           ALICE_LND_ADDRESS: "127.0.0.1:10009"
-          BOB_DIR: "$TEST_DIR/bob_node"
+          BOB_DIR: "${{ env.TEST_DIR }}/bob_node"
           BOB_LND_ADDRESS: "127.0.0.1:10011"
           BOB_BREEZ_ADDRESS: "127.0.0.1:50054"
-          BREEZ_DIR: "$TEST_DIR/breez_node"
+          BREEZ_DIR: "${{ env.TEST_DIR }}/breez_node"
           BREEZ_LND_ADDRESS: "127.0.0.1:10010"
-          SUBSWAP_DIR: "$TEST_DIR/subswap_node"
+          SUBSWAP_DIR: "${{ env.TEST_DIR }}/subswap_node"
           SUBSWAP_LND_ADDRESS: "127.0.0.1:10012"
           BTCD_HOST: "127.0.0.1:18556"
-          BTCD_CERT_FILE: "$TEST_DIR/btcd-rpc.cert"  
+          BTCD_CERT_FILE: "${{ env.TEST_DIR }}/btcd-rpc.cert"  
         run: |
           cd docker
           ./start-network.sh
