--- a/.github/workflows/itest.yml
+++ b/.github/workflows/itest.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      TEST_DIR: '{{ env.GITHUB_WORKSPACE }}/test'
+      TEST_DIR: '${{ env.GITHUB_WORKSPACE }}/test'
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
