--- a/docker/alice/Dockerfile
+++ b/docker/alice/Dockerfile
@@ -1,9 +1,11 @@
 FROM alpine:3.12 AS builder
 RUN apk update
 RUN apk add git go musl-dev make bash
-
+RUN export tags="experimental signrpc walletrpc chainrpc invoicesrpc routerrpc backuprpc peerrpc submarineswaprpc breezbackuprpc"
 RUN git clone https://github.com/lightningnetwork/lnd
-RUN cd lnd && make install
+ENV tags="experimental signrpc walletrpc chainrpc invoicesrpc routerrpc backuprpc peerrpc submarineswaprpc breezbackuprpc"
+ENV DEV_TAGS="experimental signrpc walletrpc chainrpc invoicesrpc routerrpc backuprpc peerrpc submarineswaprpc breezbackuprpc"
+RUN cd lnd && tags="experimental signrpc walletrpc chainrpc invoicesrpc routerrpc backuprpc peerrpc submarineswaprpc breezbackuprpc" && make install
 
 COPY . /src/breez
 RUN cd /src/breez && go build -tags="experimental signrpc walletrpc chainrpc invoicesrpc routerrpc backuprpc peerrpc submarineswaprpc breezbackuprpc" ./itest/client_node.go
