--- a/docker/alice/lnd.conf
+++ b/docker/alice/lnd.conf
@@ -6,7 +6,8 @@ nobootstrap=1
 [Bitcoin]
 bitcoin.active=1
 bitcoin.node=neutrino
-bitcoin.defaultchanconfs=1
+bitcoin.defaultchanconfs=3
+bitcoin.skip-channel-confirmation=1
 [Routing]
 routing.assumechanvalid=1
 [Neutrino]
