Update docker files and configuration files

--- a/docker/alice/lnd.conf
+++ b/docker/alice/lnd.conf
@@ -1,14 +1,19 @@
 [Application Options]
 noseedbackup=1
+nolisten=1
 rpclisten=0.0.0.0:10009
 rpcmemlisten=1
 nobootstrap=1
+maxbackoff=20s
 [Bitcoin]
 bitcoin.active=1
 bitcoin.node=neutrino
 bitcoin.defaultchanconfs=3
-bitcoin.skip-channel-confirmation=1
+bitcoin.defaultremotedelay=1008
 [Routing]
 routing.assumechanvalid=1
 [Neutrino]
 neutrino.connect=10.5.0.5:18555
+[Tor]
+tor.socks=127.0.0.1:9050
+tor.control=127.0.0.1:9051
