--- a/docker/lspd/Dockerfile
+++ b/docker/lspd/Dockerfile
@@ -1,15 +1,14 @@
-FROM golang:1.17-alpine3.16 AS builder
-RUN apk update
-RUN apk add git go musl-dev make
+FROM golang:latest AS builder
 COPY ./docker/lspd/.env .
 COPY ./docker/lspd/start.sh .
 RUN chmod +x ./start.sh
-RUN git clone https://github.com/breez/lspd -b master
+RUN git clone https://github.com/breez/lspd
 RUN cd lspd \
     && go mod tidy \
     && go build .
-RUN go get github.com/joho/godotenv/cmd/godotenv
-RUN git clone https://github.com/breez/lnd -b fix-subswapper-macaroon
+RUN cd lspd \
+    && go get github.com/joho/godotenv/cmd/godotenv
+RUN git clone https://github.com/breez/lnd -b breez-node-v0.15.4
 RUN cd lnd \
     && tage="signrpc walletrpc chainrpc invoicesrpc routerrpc backuprpc peerrpc submarineswaprpc breezbackuprpc" \
     && make install
