--- a/docker/breez_server/Dockerfile
+++ b/docker/breez_server/Dockerfile
@@ -7,7 +7,7 @@ RUN git clone https://github.com/breez/server
 RUN cd server \
     && go build .
 RUN go install github.com/joho/godotenv/cmd/godotenv@latest
-RUN git clone https://github.com/breez/lnd -b breez-node-v0.15.4
+RUN git clone https://github.com/breez/lnd -b breez-node
 RUN cd lnd \
     && tage="signrpc walletrpc chainrpc invoicesrpc routerrpc backuprpc peerrpc submarineswaprpc breezbackuprpc" \
     && make install
