More fixes and cleanup

--- a/docker/alice/lnd.conf
+++ b/docker/alice/lnd.conf
@@ -17,3 +17,6 @@ neutrino.connect=10.5.0.5:18555
 [Tor]
 tor.socks=127.0.0.1:9050
 tor.control=127.0.0.1:9051
+[protocol]
+protocol.option-scid-alias=true
+protocol.zero-conf=true
