--- a/docker/simnet.yml
+++ b/docker/simnet.yml
@@ -119,6 +119,8 @@ services:
       - "btcd:blockchain"
     depends_on:
       - "btcd"
+      - "breez"
+      - "lspd"
     networks:
       nodes:
         ipv4_address: 10.5.0.11
@@ -146,18 +148,22 @@ services:
     build:
       context: ../
       dockerfile: docker/lspd/Dockerfile
+    environment:
+      - NODE_PUBKEY
     volumes:
       - ${TEST_DIR}/breez_node:/root/breez_node
     links:
       - "postgres_interceptor:postgres_interceptor"
     depends_on:
       - postgres_interceptor
+      - postgres
       - breez
     networks:
       nodes:
         ipv4_address: 10.5.0.9
   postgres:
     image: postgres
+    container_name: postgres_breez_server
     networks:
       nodes:
         ipv4_address: 10.5.0.6
@@ -165,6 +171,7 @@ services:
       POSTGRES_PASSWORD: test
   postgres_interceptor:
     image: postgres
+    container_name: postgres_interceptor
     networks:
       nodes:
         ipv4_address: 10.5.0.8
