--- a/docker/breez/lnd.conf
+++ b/docker/breez/lnd.conf
@@ -15,3 +15,5 @@ btcd.rpchost=blockchain
 btcd.rpcuser=devuser
 btcd.rpcpass=devpass
 btcd.rpccert=/rpc/rpc.cert
+protocol.option-scid-alias=true
+protocol.zero-conf=true
