Add MEMPOOL_API_BASE_URL variable to the simnet
LSPD was unable to load because it was missing the mempool URL which is now mandatory

--- a/docker/dev-simnet.yml
+++ b/docker/dev-simnet.yml
@@ -118,6 +118,7 @@ services:
       nodes:
         ipv4_address: 10.5.0.9
     environment:
+      MEMPOOL_API_BASE_URL: ${MEMPOOL_API_BASE_URL}
       NODE_HOST: ${DEV_HOST_IP}:9736
       NODE_PUBKEY: ${NODE_PUBKEY}
   dev-postgres:
