--- a/docker/simnet.yml
+++ b/docker/simnet.yml
@@ -149,6 +149,7 @@ services:
       context: ../
       dockerfile: docker/lspd/Dockerfile
     environment:
+      MEMPOOL_API_BASE_URL: ${MEMPOOL_API_BASE_URL}
       NODE_HOST: 10.5.0.3
       NODE_PUBKEY: ${NODE_PUBKEY}
     volumes:
