--- a/docker/lnd/Dockerfile
+++ b/docker/lnd/Dockerfile
@@ -1,11 +1,11 @@
 FROM alpine:latest AS builder
 RUN apk update
 RUN apk add git go musl-dev make bash
-RUN git clone https://github.com/breez/lnd
+RUN git clone --depth 1 --branch v0.16.4-beta https://github.com/lightningnetwork/lnd
 
 RUN cd lnd \
-    && go build -tags=experimental,invoicesrpc,signrpc,autopilotrpc,experimental,submarineswaprpc,chanreservedynamic,routerrpc,walletrpc,chainrpc ./cmd/lnd/ \
-    && go build -tags=experimental,invoicesrpc,signrpc,autopilotrpc,experimental,submarineswaprpc,chanreservedynamic,routerrpc,walletrpc,chainrpc ./cmd/lncli/
+    && go build -tags=experimental,invoicesrpc,signrpc,autopilotrpc,routerrpc,walletrpc,chainrpc ./cmd/lnd/ \
+    && go build -tags=experimental,invoicesrpc,signrpc,autopilotrpc,routerrpc,walletrpc,chainrpc ./cmd/lncli/
 
 VOLUME /root/.lnd
 EXPOSE 10013 9739
